[package]
name = "bclicker"
version = "2.0.0"
edition = "2025"
authors = ["Linux Brat <linux.bratt@gmail.com>"]
description = "Professional auto-clicker with TUI interface"
license = "MIT"
repository = "https://github.com/linux-brat/BClicker"
keywords = ["clicker", "automation", "tui", "windows"]

[[bin]]
name = "bclicker"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
tui = "0.19"
enigo = "0.0.14"
tray-item = "0.10"
rodio = "0.17"
notify-rust = "4.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
